# time_tracker

./: .gitignore  CLAUDE.md  README.md  build_exe.cmd  pyproject.toml  run.py
src/: config.py  main.py
src/core/: event_bus.py  idle_detector.py  models.py  timer_engine.py  window_tracker.py
src/database/: connection.py  repositories.py  schema.py
src/gui/: app.py  floating_timer.py
src/gui/components/: time_display.py
src/gui/frames/: dashboard_frame.py  projects_frame.py  reports_frame.py  settings_frame.py
tests/: conftest.py  test_models.py
tests/test_core/: test_event_bus.py  test_idle_detector.py  test_timer_engine.py  test_window_tracker.py
tests/test_database/: test_repositories.py  test_schema.py
tests/test_gui/: test_time_display.py
